Actualizacion de objetivos ondas 1-5

--- a/elliot.html
+++ b/elliot.html
@@ -560,8 +560,10 @@
                           <br>
                           El inicio de la Onda (I), final de la onda 5 (bajista), vista desde Wyckoff se identifica como el (Spring) una penetración del precio en mininos en una zona de soporte dentro de un rango lateral, esos mínimos o soporte es una de las zonas primaria, llamada "SC" que rápidamente se da la vuelta y retorna al rango del cual salió. 
                           <br> <br>
-                          Es un claro ejemplo de ‘trampa bajista’ porque el hecho de atravesar el soporte parece una señal de que la oferta tiene el control de nuevo de la tendencia bajista. Siendo la entrada fuerte de la demanda la que impulsa de nuevo el precio al alza con rangos y volúmenes relativamente altos, esto nos proporciona un rally a la parte alta del rango (Trading ranges).  
-                      </p>
+                          Es un claro ejemplo de ‘trampa bajista’ porque el hecho de atravesar el soporte parece una señal de que la oferta tiene el control de nuevo de la tendencia bajista. Siendo la entrada fuerte de la demanda la que impulsa de nuevo el precio al alza con rangos y volúmenes relativamente altos, esto nos proporciona un rally a la parte alta del rango (Trading ranges).  <br>
+                          <p>Objetivos para la onda 1</p> <br>
+                        La primera onda, un nuevo movimiento impulsivo de los precios, tiende a detenerse en la base de la corrección anterior, que normalmente es la onda B. Esto a menudo coincide con un 38,2% o un retroceso del 61,8% de la corrección anterior.
+                        </p>
                      </div>
                   </div>
                   <div class="method-example">
@@ -575,7 +577,6 @@
                      </div>
                   </div>
                </div>
-
                <div class="method-copy">
                      <div class="method-copy-padding">
                       <p>
@@ -591,11 +592,10 @@
                            <li> La onda 3 no puede ser la onda más corta.  </li>
                            <li> Las ondas internas 1, 3 y 5 tienen una estructura de  onda impulsiva. </li>
                            <li> La onda 1 es la más larga de las ondas y la onda 5 la más corta. </li>
-                           <li>Como guía de la estructura interna de la onda
-                                 debe mostrar el resultado de la alternancia, lo que significa que las ondas 2 y 4 muestren un tipo diferente de estructura correctiva. </li>
+                           <li>Como guía de la estructura interna de la onda debe mostrar el resultado de la alternancia, lo que significa que las ondas 2 y 4 muestren un tipo diferente de estructura correctiva. </li>
                         </ul>
-                        ¿En qué onda? Los Triángulos Diagonales tipo 2 ocurren en las ondas 1 y A. Estructura Interna Las cinco ondas de un Triangulo diagonal tipo 2 muestran una estructura interna 5-3-5-3-5 
-                     </p>
+                        ¿En qué onda? Los Triángulos Diagonales tipo 2 ocurren en las ondas 1 y A. Estructura Interna Las cinco ondas de un Triangulo diagonal tipo 2 muestran una estructura interna 5-3-5-3-5. 
+                       </p>
                   </div>
                </div>
                     
@@ -618,10 +618,12 @@
                          <h3><b>ONDA 2</b></h3>
                          <b> Onda (II):</b> Retroceden gran parte de la onda (I) entre el 50% y el 61.8 incluso mas.
                          todos los retrocesos son matices y siempre teniendo en cuenta la dilatación del precio por noticias o eventos del momento que no controla el mercado.
-                          <br><br>
+                          <br>
                          Wyckoff lo denomina (Back) retroceso del arroyo donde vemos una reducción en el volumen en el retroceso del precio.
-                          <br><br>
+                          <br>
                          La recuperación del precio a la zona perforada confirmar que la zona antes resistencia ahora es soporte y confirmar la tendencia alcista después de salir de la zona (trading ranges).
+                        <p>Objetivos para la onda 2</p> <br>
+                         La onda 2 se retrasa al menos un 38,2% pero la mayoría de las veces el 61,8% o más de la onda 1. A menudo se detiene en la sub onda 4 y con mayor frecuencia en la sub onda 2 previa a la onda 1.Un retroceso de más del 76% es altamente sospechoso, aunque todavía no se rompa ninguna regla.
                        </p>
                       </div>
                    </div>
@@ -647,7 +649,9 @@
                           <br><br>
                          La Onda (III) se sub-divide en 5 Sub-ondas 3-1, 3-2, 3-3, 3-4, 3-5: 
                           <br> <br>
-                         La ondas siguen los mismos principios que el resto de ondas de Grado mayor, siendo las mas importantes las ondas 3-3, 3-4, 3-5 ya que coinciden en los inicios de los procesos de distribución y donde podemos encontrar en su onda 3-3 el (PSY) de Wyckoff. 
+                         La ondas siguen los mismos principios que el resto de ondas de Grado mayor, siendo las mas importantes las ondas 3-3, 3-4, 3-5 ya que coinciden en los inicios de los procesos de distribución y donde podemos encontrar en su onda 3-3 el (PSY) de Wyckoff. <br><br>
+                         <p>Objetivos para la onda 3</p> <br> 
+                         La onda 3 es al menos igual a la onda 1, a excepción de un triángulo. Si la onda 3 es la onda más larga tenderá a ser el 161% de la onda 1 o incluso el 261%.
                        </p>
                       </div>
                    </div>
@@ -672,6 +676,9 @@
                          <b> Onda IV:</b> Son más predecibles por la ley de la alternancia (debe diferir en complejidad), y signos sutiles de debilidad donde la oferta tiene el control. <br><br>
 
                          Entre el final de la onda (III) y la onda (IV), se marcan zonas primarias, (BC) , (AR)  y (SOW) de Wyckoff cerrando la zona trading ranges de distribución.
+
+                        <p>Objetivos para la onda 4</p> <br>
+                        La onda 4 se retrasa al menos un 23% de la onda 3, pero más a menudo llega a un retroceso del  38,2%. Normalmente alcanza el territorio de la sub onda 4 de la tercera onda anterior. <br>En los mercados muy fuertes la onda 4 sólo se retrasa el 14% de la onda 3.
                        </p>
                       </div>
                    </div>
@@ -727,7 +734,9 @@
                       <div class="method-copy-padding">
                          <p>
                          <h3><b>ONDA 5</b></h3>
-                         <b>Onda (V):</b> Puede ser extendida (normalmente no), aquí vemos optimismo alto acompañado de noticias buenas, son ondas lentas y reflejan el posible cambio, aquí podemos encontramos con las famosas trampas de mercado UT o UTAD.
+                         <b>Onda (V):</b> Puede ser extendida (normalmente no), aquí vemos optimismo alto acompañado de noticias buenas, son ondas lentas y reflejan el posible cambio, aquí podemos encontramos con las famosas trampas de mercado UT o UTAD. <br><br>
+                         <p>Objetivos para la onda 5</p> <br>
+                         Normalmente la onda 5 es igual a la onda 1, o recorre una distancia del 61,8% de la longitud de la onda 1. También podría tener las mismas relaciones de la onda 3 o podría recorrer el 61,8% de la longitud de las ondas 1 y 3 en su conjunto. Si la onda 5 es la onda extendida, la mayor parte será el 161,8% de  la onda 3 ó el 161,8% de la longitud de las ondas 1 y 3 en su conjunto.
                        </p>
                       </div>
                    </div>
