--- a/elliot.html
+++ b/elliot.html
@@ -560,8 +560,8 @@
                           <br>
                           El inicio de la Onda (I), final de la onda 5 (bajista), vista desde Wyckoff se identifica como el (Spring) una penetración del precio en mininos en una zona de soporte dentro de un rango lateral, esos mínimos o soporte es una de las zonas primaria, llamada "SC" que rápidamente se da la vuelta y retorna al rango del cual salió. 
                           <br> <br>
-                          Es un claro ejemplo de ‘trampa bajista’ porque el hecho de atravesar el soporte parece una señal de que la oferta tiene el control de nuevo de la tendencia bajista. Siendo la entrada fuerte de la demanda la que impulsa de nuevo el precio al alza con rangos y volúmenes relativamente altos, esto nos proporciona un rally a la parte alta del rango (Trading ranges).  <br>
-                          <p>Objetivos para la onda 1</p> <br>
+                          Es un claro ejemplo de ‘trampa bajista’ porque el hecho de atravesar el soporte parece una señal de que la oferta tiene el control de nuevo de la tendencia bajista. Siendo la entrada fuerte de la demanda la que impulsa de nuevo el precio al alza con rangos y volúmenes relativamente altos, esto nos proporciona un rally a la parte alta del rango (Trading ranges).  <br><br>
+                          <b>Objetivos para la onda 1:</b> <br>
                         La primera onda, un nuevo movimiento impulsivo de los precios, tiende a detenerse en la base de la corrección anterior, que normalmente es la onda B. Esto a menudo coincide con un 38,2% o un retroceso del 61,8% de la corrección anterior.
                         </p>
                      </div>
