finalizacion de patrones clasicos

--- a/patrones-elliot.html
+++ b/patrones-elliot.html
@@ -128,7 +128,7 @@
                            <li><a href="#documenter-3-2">Plana Expandida</a></li>
                            <li><a href="#documenter-3-3">Triángulos</a></li>
                            <li><a href="#documenter-3-4">Ondas WXY</a></li>
-                           <li><a href="#documenter-3-4">Plana Continua</a></li>
+                           <li><a href="#documenter-3-5">Plana Continua</a></li>
                          </ol>
                       </li>
                       <li><a href="#documenter-4"><i class="fa fa-line-chart"></i>Ondas de Impulso <b>+</b></a>
@@ -536,22 +536,49 @@
                <div class="method-area">
                   <div class="method-copy">
                      <div class="method-copy-padding">
-                        <h4><b>Auto similitud</b></h4>
-                      <p>
-                         Los fractales autosimilares son estructuras que permanecen invariantes a los cambios de escala, son isotrópicos (tienen las mismas propiedades en todas las direcciones), permanecen invariantes cuando cambia la escala uniformemente en todas las direcciones. 
-                      </p>
+                        <h4><b>Triangulos</b></h4> <br>
+                        <p>
+                           <h5> <b>Descripción</b></h5>
+                           Un triángulo es un patrón correctivo, el que puede contraerse o expandirse. Además, puede ser ascendente o descendente. Se compone de cinco ondas, cada uno de ellos tiene  una naturaleza correctiva.
+                            <h5> <b>Reglas y normas</b></h5>
+                              <ul>
+                                 <li>Se compone de 5 ondas.</li>
+                                 <li>La onda 4 y 1 se superponen.</li>
+                                 <li>La onda 4 no puede ir más allá del origen de la onda 3.</li>
+                                 <li>La onda 3 no puede ser la onda más corta.</li>
+                                 <li>Internamente todas las ondas de la diagonal tienen una estructura de ondas correctivas.</li>
+                                 <li>En un triángulo contracto, la onda 1 es la onda más larga y  la onda 5 la más corta. En un triángulo expansivo la onda uno es la más corta y la onda cinco la más larga.</li>
+                                 <li>Los triángulos normalmente tienen una forma de cuña, que se deriva de la anterior.</li>
+                                 <li>Como guía de la estructura interna de la onda debe mostrar el resultado de la alternancia.</li>
+                              </ul>
+                               <h5> <b>¿En qué onda?</b></h5>
+                                 Los triángulos solo ocurren en las ondas B, X y 4. Nunca en las ondas 2 o A.
+                                 <h5> <b>Estructura Interna</b></h5>
+                                 Está compuesto por cinco ondas, de los cuales la estructura interna es 3-3-3-3-3.  <br><br><br>
+                              </p>
                     </div>
                   </div>
                  <div class="method-example">
                     <div class="method-example-part">
-                         <p>
-                          <h5><b>Similitud</b></h5>
-                             <p> <img src="fotos/elliot/koch.gif" alt="similitud-similitud" align="middle  onclick="Zoom(this)"> </p>
-                           <blockquote class="darker-grey">
-                              <p><a href="https://es.wikipedia.org/wiki/Autosimilaridad">Curva de Koch </a>.</p>
-                              <footer>“Una curva de Koch presenta una autosimilaridad exacta infinitamente repitiente a medida que se aumenta su tamaño..”</cite></footer>
-                           </blockquote>
-                         </p>
+                     <p>
+                        <h5><b>FOTOS Y EJEMPLOS</b></h5>
+                         <p> <img src="fotos/elliot/triangulo-correctivo-ascendente.jpg" alt="Plana plana-expandida-alcista" align="middle" onclick="Zoom(this)"> </p>
+                         <blockquote class="darker-grey">
+                              <li>Triangulo correctivo ascendente.</li>
+                           </blockquote>        
+                           
+                         <p> <img src="fotos/elliot/triangulo-correctivo-decendente.jpg" alt="plana-expandida-bajista" align="middle" onclick="Zoom(this)"> </p>
+                         <blockquote class="darker-grey">
+                              <li>Triangulo correctivo descendente.</li>
+                           </blockquote> 
+                           <p> <img src="fotos/elliot/triangulo-expandido-alcista.jpg" alt="plana-expandida-bajista" align="middle" onclick="Zoom(this)"> </p>
+                         <blockquote class="darker-grey">
+                              <li>Triangulo expandido descendente.</li>
+                           </blockquote>   
+                           <p> <img src="fotos/elliot/triangulo-expandido-bajista.jpg" alt="plana-expandida-bajista" align="middle" onclick="Zoom(this)"> </p>
+                         <blockquote class="darker-grey">
+                              <li>Triangulo expandido descendente.</li>
+                           </blockquote>                
                     </div>
                   </div>
                </div>
@@ -560,20 +587,78 @@
                <div class="method-area">
                   <div class="method-copy">
                      <div class="method-copy-padding">
-                        <h4><b>Auto afinidad</b></h4>
+                        <h4><b>WXY o Combinaciones</b></h4>
                       <p>
-                        Los modelos que representan un sistema fractal tienen auto similitud a un nivel macro y a un nivel micro. Es decir, procesos matemáticos de creación de estructuras fractales son iteraciones de reglas simples de objetos iniciales. Pequeños cambios crean enorme variedad de patrones tanto a nivel micro como a nivel macro. La creatividad de la naturaleza, según parece, viene de este procedimiento iterativo.
+                        Muchos tipos de combinaciones son posibles. A continuación un ejemplo bastante complejo ha sido representado.
+                        <p>
+                           <h5> <b>Descripción</b></h5>
+                           Es una combinación de varios tipos de correcciones. Estas correcciones se etiquetan como WXY y WXYXZ si es aún más compleja. Empieza por ejemplo con un zigzag (onda W), a continuación una onda X intermedia, una plana (onda Y) y así sucesivamente. Un llamado doble o triple tres es también una combinación, pero este modelo combina planas separadas por ondas X.
+                            <h5> <b>Reglas y normas</b></h5>
+                              <ul>
+                                 <li>Todos los tipos de patrones correctivos pueden combinarse para formar un patrón correctivo mayor.</li>
+                                 <li>Las reglas y normas, como se ha mencionado para otros patrones correctivos son aplicables.</li>
+                                 <li>Un triángulo es una combinación que normalmente debe ocurrir al final.</li>
+                                 <li>Los patrones de corrección en una combinación por lo general muestran alternancia.</li>
+                              </ul>
+                            <h5> <b>¿En qué onda?</b></h5>
+                            Por lo general una combinación se produce sobre todo en  ondas B, X y 4, es menos común en una onda A y muy raras en la onda 2.
+                            <h5> <b>Estructura Interna</b></h5>
+                            Por ejemplo, un zigzag, seguido por una plana, seguido de un triángulo tiene la siguiente estructura interna: 5-3-5 (zigzag)
+                            -5-3-5 (X) -3-3-5 (Plana) -3-3-3-3-3 (Triángulo).             
+                         </p>
                       </p>
                     </div>
                   </div>
                  <div class="method-example">
                     <div class="method-example-part">
                      <p>   
-                        <h5><b>Auto afinidad</b></h5>
-                         <p> <img src="fotos/elliot/auto-afinidad.jpg"alt="triangulo tipo 1 de Elliot" onclick="Zoom(this)">  </p>
-                         <blockquote class="darker-grey">
-                          <p><a href="https://es.wikipedia.org/wiki/Tri%C3%A1ngulode_Sierpinski">Triángulo de Sierpinski </a>.</p> que se puede construir a partir de cualquiertriángulo.”</cite></footer>
-                          </blockquote>
+                        <h5><b>FOTOS Y EJEMPLOS</b></h5>
+                        <p> <img src="fotos/elliot/WXY.jpg" alt="wxy" align="middle" onclick="Zoom(this)"> </p>
+                        <blockquote class="darker-grey">
+                             <li>WXY o Combinaciones</li>
+                          </blockquote>        
+                       </p>
+                    </div>
+                  </div>
+               </div>
+            </section>
+            <section id="documenter-3-5" class="method">
+               <div class="method-area">
+                  <div class="method-copy">
+                     <div class="method-copy-padding">
+                        <h4><b>Plana Continua o Corrección Continua</b></h4>
+                      <br>
+                        <p>
+                           <h5> <b>Descripción</b></h5>
+                           Una corrección continua es una rara forma de fallo. Este patrón es una especie de Plana, con una onda B alargada y una  onda C muy pequeña. De acuerdo a la teoría, la onda C debe ser tan corta que no llegue al territorio de precios de la onda A. ELWAVE no hace una excepción de una onda C  que  no alcanza el territorio de precios de la onda A. <br><br>
+                           En lugar de una corrección continua esta podría ser en teoría una extensión de una  onda impulsiva, donde se ha subdividido la onda en dos (o más) series 1,2. Si la onda B es una clara onda tres, entonces es una extensión, de lo contrario una corrección continua. En la práctica no habrá ninguna diferencia en la dirección del mercado: en ambos supuestos, el  mercado va a explotar en la dirección de la onda B, por lo tanto ELWAVE prefiere etiquetarla como una extensión. Por motivos de exactitud se ha incluido este  patrón  y se ha implementado en las REGLAS CLASICAS, no en las REGLAS MODERNAS.
+
+                            <h5> <b>Reglas y normas</b></h5>
+                              <ul>
+                                 <li>La onda B se compone de tres ondas. </li>
+                                 <li>La onda C se compone de cinco ondas. </li>
+                                 <li>La onda C debe ser mucho más corta y normalmente no llega al territorio de precios de la onda A. </li>
+                                 <li>La onda C no debe retroceder más del 100% de la onda B, pero debe ser mayor al 60% de la onda A.</li>
+                              </ul>
+                            <h5> <b>¿En qué onda?</b></h5>
+                            La mayoría de las veces debe ocurrir en las ondas 2 o B.
+                            <h5> <b>Estructura Interna</b></h5>
+                            Es una estructura de tres ondas. La estructura interna es 3-3-5.          
+                         </p>
+                    </div>
+                  </div>
+                 <div class="method-example">
+                    <div class="method-example-part">
+                     <p>   
+                        <h5><b>FOTOS Y EJEMPLOS</b></h5>
+                        <p> <img src="fotos/elliot/plana-continua-alcista.jpg" alt="Plana continua alcista" align="middle" onclick="Zoom(this)"> </p>
+                        <blockquote class="darker-grey">
+                             <li>Plana continua alcista</li>
+                          </blockquote>        
+                          <p> <img src="fotos/elliot/plana-continua-bajista.jpg" alt="plana continua bajista" align="middle" onclick="Zoom(this)"> </p>
+                          <blockquote class="darker-grey">
+                               <li>Plana continua bajista</li>
+                            </blockquote>        
                        </p>
                     </div>
                   </div>
