Actualizacion de contenido

--- a/elliot.html
+++ b/elliot.html
@@ -145,7 +145,7 @@
                            <li><a href="#documenter-5-3">Onda C</a> </li>
                         </ol>
                      </li>
-                     <li><a href="./patrones-elliot.html"><i class="fa fa-laptop"></i>Patrones</a>
+                     <li><a href="./patrones-elliot.html"><i class="fa fa-braille"></i>Patrones</a>
                   </ol>
                </div>
             </div>
@@ -576,39 +576,7 @@
                            </blockquote>
                      </div>
                   </div>
-               </div>
-               <div class="method-copy">
-                     <div class="method-copy-padding">
-                      <p>
-                        <h3> <b> PATRONES DE TENDENCIA EN ONDA 1 </b><br><br>
-                        Triángulo Diagonal tipo 2. Diagonal de inicio. </b></h3>
-                        La Diagonal tipo 2 es una especie de patrón impulsivo, que normalmente se produce en la onda 1 o en la onda A. La principal diferencia con el tipo de Triángulo Diagonal 1 es el hecho de que las ondas 1, 3 y 5 tienen una estructura ¡interna de cinco ondas en lugar de tres. La experiencia demuestra que también puede ocurrir en una onda 5 o C, aunque el principio de la onda de Elliott no lo permite. No confundir con los triángulos correctivos . <br><br>
-                        Las Diagonales son fenómenos relativamente raros en los grandes grados de onda, pero se producen a menudo en grados de onda   más pequeñas en gráficos intrdía. Estos triángulos diagonales no son seguidos por un cambio    violento en la dirección del mercado,  ya que no es el final de una tendencia, excepto cuando ocurren en una onda quinta o una onda C
-                        <b> Las reglas y normas más importantes son:</b>
-                        <ul>
-                           <li> Estan compuestas por 5 ondas. </li>
-                           <li> La onda 4 y 1 se Superponen.</li>
-                           <li> La onda 4 no puede ir más allá del origen de la onda 3.</li>
-                           <li> La onda 3 no puede ser la onda más corta.  </li>
-                           <li> Las ondas internas 1, 3 y 5 tienen una estructura de  onda impulsiva. </li>
-                           <li> La onda 1 es la más larga de las ondas y la onda 5 la más corta. </li>
-                           <li>Como guía de la estructura interna de la onda debe mostrar el resultado de la alternancia, lo que significa que las ondas 2 y 4 muestren un tipo diferente de estructura correctiva. </li>
-                        </ul>
-                        ¿En qué onda? Los Triángulos Diagonales tipo 2 ocurren en las ondas 1 y A. Estructura Interna Las cinco ondas de un Triangulo diagonal tipo 2 muestran una estructura interna 5-3-5-3-5. 
-                       </p>
-                  </div>
-               </div>
-                    
-                      <div class="method-example">
-                           <div class="method-example-part">
-                              <h5>Triángulo Diagonal tipo 2. Diagonal de inicio.</h5>
-                                 <p> <img src="fotos/elliot/triangulo-T2-I.jpg" alt="triangulo tipo 2 de Elliot" onclick="Zoom(this)">  </p>
-                                 <blockquote class="darker-grey">
-                                    <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
-                                    <footer>Si quieres mas informacion visita esta pagina</cite></footer>
-                                 </blockquote>
-                              </div>
-                  </div>
+               </div>                 
             </section>
             <section id="documenter-4-2" class="method">
                 <div class="method-area">
