--- a/wyckoff.html
+++ b/wyckoff.html
@@ -83,7 +83,7 @@
                            </ul>
                            <div class="dx-auth-block">
                               <div class="dx-auth-logged-out">
-                                 <a class="dx-auth-login dx-btn dx-btn-primary" data-js="auth-btn" href="javascript:void(0);"
+                                 <a class="dx-auth-login dx-btn dx-btn-primary" data-js="auth-btn" href="./index.html"
                                     data-dxa="login,nav-click,nav-login">Inicio</a>
                               </div>
                            </div>
