--- a/patrones-elliot.html
+++ b/patrones-elliot.html
@@ -134,6 +134,24 @@
                       </li>
                      <li><a href="./elliot.html"><i class="fa fa-male"></i>Volver a Elliot</a>
                   </ol>
+                  <!-- Widget BEGIN -->
+                  <script type="text/javascript">
+                     baseUrl = "https://widgets.cryptocompare.com/";
+                     var scripts = document.getElementsByTagName("script");
+                     var embedder = scripts[ scripts.length - 1 ];
+                     (function (){
+                     var appName = encodeURIComponent(window.location.hostname);
+                     if(appName==""){appName="local";}
+                     var s = document.createElement("script");
+                     s.type = "text/javascript";
+                     s.async = true;
+                     var theUrl = baseUrl+'serve/v1/coin/chart?fsym=BTC&tsym=USD';
+                     s.src = theUrl + ( theUrl.indexOf("?") >= 0 ? "&" : "?") + "app=" + appName;
+                     embedder.parentNode.appendChild(s);
+                     })();
+                     </script>
+   
+                     <!-- Widget END -->
                </div>
             </div>
          </div>
@@ -1106,40 +1124,30 @@
                </li>
                <li>
                   <a>MENU DE INICIO</a>
-                     <li><a href="#documenter-1">Richard D. Wyckoff</a> </li>
-                     <li><a href="#documenter-2">El metodo Wyckoff </a>
-                       <ul>
-                         <li><a href="#documenter-2-1">Las 3 leyes del mercado</a></li>
-                         <li><a href="#documenter-2-2">Ley de causa y efecto</a></li>
-                         <li><a href="#documenter-2-3">Ley de efuerzo y resultado</a></li>
-                       </ul>
-                     </li>
-                     <li><a href="#documenter-3">Ciclos del mercado</a></li>
-                     <li><a href="#documenter-4">Fase de acumulacion</a>
-                       <ul>
-                         <li><a href="#documenter-4-1">Fase A</a></li>
-                         <li><a href="#documenter-4-2">Fase B</a> </li>
-                         <li><a href="#documenter-4-3">Fase C</a> </li>
-                         <li><a href="#documenter-4-4">Fase D</a> </li>
-                         <li><a href="#documenter-4-5">Fase E</a> </li>
-                       </ul>
-                     </li>
-                     <li><a href="#documenter-5">Fase de distribucion</a>
-                       <ul>
-                          <li><a href="#documenter-5-1">Fase A</a></li>
-                          <li><a href="#documenter-5-2">Fase B</a> </li>
-                          <li><a href="#documenter-5-3">Fase C</a> </li>
-                          <li><a href="#documenter-5-4">Fase D</a> </li>
-                          <li><a href="#documenter-5-5">Fase E</a> </li>
-                       </ul>
-                     </li>
-               </li>
+                  <li><a href="#documenter-1"><i class="fa fa-braille"></i>Patrones</a></li>
+                  <li><a href="#documenter-2"><i class="fa fa-line-chart"></i>Tendencias </a>
+                     <ul>
+                       <li><a href="#documenter-2-1">Extensiones </a></li>
+                       <li><a href="#documenter-2-2">Triangulos</a></li>
+                       <li><a href="#documenter-2-3">Fallos</a></li>
+                     </ul>
+                   </li>
+                   <li><a href="#documenter-3"><i class="fa fa-area-chart"></i>Correcciones</a>
+                     <ul>
+                        <li><a href="#documenter-3-1">Plana</a></li>
+                        <li><a href="#documenter-3-2">Plana Expandida</a></li>
+                        <li><a href="#documenter-3-3">Zigzag</a></li>
+                        <li><a href="#documenter-3-4">Triángulos</a></li>
+                        <li><a href="#documenter-3-5">Ondas WXY</a></li>
+                        <li><a href="#documenter-3-6">Plana Continua</a></li>
+                     </ul>
+                  </li>
+                   </li>
+                  <li><a href="./elliot.html"><i class="fa fa-male"></i>Volver a Elliot</a>   
             </ul>
+
             <div class="top-links">
                <ul class="links">
-                  <li><a title="Docs" href="javascript:void(0)">Enlace1</a> </li>
-                  <li><a title="API Reference" href="javascript:void(0)">Enlace2</a> </li>
-                  <li><a title="Support" href="javascript:void(0)">Enlace3<a> </li>
                   <li class="last"><a title="Login" href="javascript:void(0)">Login</a> </li>
                </ul>
             </div>
